--- a/.github/workflows/Plus_aes.yml
+++ b/.github/workflows/Plus_aes.yml
@@ -27,7 +27,7 @@ env:
 
 jobs:
   Build:
-    runs-on: self-hosted
+    runs-on: ubuntu-20.04
     outputs:
       OPENWRTROOT: ${{ steps.update.outputs.OPENWRTROOT }}
       PLATFORM: ${{ steps.compile.outputs.PLATFORM }}
@@ -158,7 +158,7 @@ jobs:
           echo "::set-output name=release_tag::$(date +"%Y.%m.%d")-Lean30"
           echo "::set-output name=release_date::$(date +"%Y.%m.%d")"
           touch release.txt
-          echo "后台地址：192.168.11.1 此版开启了crypto硬件，仅供测试" >> release.txt
+          echo "后台地址：192.168.1.119 此版开启了crypto硬件，仅供测试" >> release.txt
           echo "::set-output name=status::success"
     - name: Upload firmware to release
       uses: softprops/action-gh-release@v1
