--- a/.github/workflows/NanoPi-R4S-Plus.yml
+++ b/.github/workflows/NanoPi-R4S-Plus.yml
@@ -83,7 +83,7 @@ jobs:
         cd $OPENWRTROOT
         ../$DIY_SH
         ../scripts/preset-terminal-tools.sh
-        make menuconfig #defconfig
+        make defconfig
     - name: Download Package
       id: package
       run: |
